# py-web-tool

./: .gitignore  LICENSE  MANIFEST  MANIFEST.in  Makefile  README  README.md  README.rst  additional.w  docutils.conf  done.w  impl.w  index.html  intro.w  jedit.rst  jedit.w  overview.w  page-layout.css  pyproject.toml  pytest.ini  pyweb.css  pyweb.html  pyweb.py  pyweb.rst  pyweb.w  pyweb_test.w  requirements-dev.txt  requirements.txt  setup.py  tangle.py  tests.w  testweaver.rst  todo.w  tox.ini  weave.py
.github/workflows/: pytest.yml
bootstrap/: pyweb-3.1.py
clippings/: chunk.w  command.w  emitter.w  web.w
docs/: conf.py  docutils.conf  pyweb.html  pyweb.py  pyweb.rst  pyweb.toml  pyweb_t.html  pyweb_test.html  pyweb_test.rst  tangle.py  weave.py
docs/_build/doctrees/: environment.pickle  index.doctree  pyweb.doctree  pyweb_test.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  pyweb.html  pyweb_test.html  search.html  searchindex.js
docs/_build/html/_sources/: index.rst.txt  pyweb_test.rst.txt
docs/_build/html/_static/: alabaster.css
examples/: ackermanns.html  ackermanns.py  ackermanns.rst  ackermanns.w  hello_world_latex.tex  hello_world_latex.w  hello_world_rst.html  hello_world_rst.rst  hello_world_rst.w  hw.html  hw.py  hw.rst  hw.w  hw_latex_1.py  hw_rst_2.py  test_latex.w  test_rst.html  test_rst.rst  test_rst.tex
jedit/: pyweb.xml
spike/: example.html  example.rst  jdemo.py  macro_override_1.py  macro_override_2.py  test.uml
src/: c4_diagrams.uml  conf.py  done.w  impl.w  intro.w  language.w  logging.toml  overview.w  pyweb.html  pyweb.py  pyweb.rst  pyweb.toml  pyweb.w  scripts.w  tangle.py  tests.w  todo.w  usage.w  weave.py
src/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  pyweb.html  search.html  searchindex.js
src/_build/html/_sources/: pyweb.rst.txt
test/: combined.rst  combined.w  func.w  intro.w  pyweb_test.html  pyweb_test.rst  pyweb_test.w  test.py  test_latex.w  test_loader.py  test_rst.w  test_tangler.py  test_unit.py  test_weaver.py  testtangler  unit.w
tests/: conftest.py  docutils.conf  func.w  intro.w  pyweb_test.html  pyweb_test.rst  pyweb_test.w  runner.py  runner.w  scripts.w  test0.debug  test_loader.py  test_scripts.py  test_tangler.py  test_unit.py  test_weaver.py  unit.w
trunk/: MANIFEST  MANIFEST.in  README  impl.w  intro.w  pyweb.py  tangle.py
trunk/test/: func.w  pyweb_test.html  test_latex.tex  test_latex.w  test_loader.py  test_rst.tex  unit.w
web/: done.w  functional.w  impl.w  intro.w  language.w  scripts.w  test_intro.w  test_scripts.w  tests.w  todo.w  unit.w  usage.w
