[build-system]
requires = ["setuptools >= 61.2.0", "wheel >= 0.37.1"]
build-backend = "setuptools.build_meta"

[project]
# https://peps.python.org/pep-0621/#readme
version = "3.3"
requires-python = ">=3.10"
name = "py-web-lp"
description="py-web-lp: Yet Another Literate Programming Tool"
readme = "README.rst"
authors = [{"name" = "S.Lott", "email" = "slott56@gmail.com"}]
license = {text = "BSD"}
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: BSD License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python",
  "Topic :: Documentation",
  "Topic :: Software Development :: Documentation",
  "Topic :: System :: Systems Administration",
  "Topic :: Text Processing :: Markup",
  "Typing :: Typed",
]
dependencies = [
  "tomli; python_version < '3.11'",
  "jinja2",
]
[project.urls]
repository = "https://github.com/slott56/py-web-tool"
documentation = "https://slott56.github.io/py-web-tool/src/pyweb.html"

[project.optional-dependencies]
dev = [
  "sphinx",
  "sphinxcontrib-plantuml",
  "docutils",
  "build",
  "twine",
  "pip-tools",
]
test = [
    "tox",
    "pytest",
    "pyright"
]

